Duplicated input with Xiaomi keyboard
Categories
(GeckoView :: IME, defect, P2)
Tracking
(firefox80 fixed)
| Tracking | Status | |
|---|---|---|
| firefox80 | --- | fixed |
People
(Reporter: ekager, Assigned: m_kato)
Details
Attachments
(1 file)
Originally reported: https://github.com/mozilla-mobile/fenix/issues/12282
Steps to reproduce
Input Chinese anywhere in the browser include URL bar with Chinese Pinyin input.
demo
Expected behavior
Correct input.
Actual behavior
More letters before.
Device information
- Android device: Xiaomi Redmi Note 8 Pro
- Fenix version: Nightly 200704 06:01
Android Version: 10
SoC: MediaTek Helio G90T(ARM64)
In the environment I encountered, every time a Chinese character was successfully created by the Pinyin input method, the English that made it up would be redundant before.
This does not happen sometimes, but it happens often.
There is no such problem in other software such as Google Chrome, Twitter, Youtube and Fennec
Similar to https://bugzilla.mozilla.org/show_bug.cgi?id=1639071 , https://bugzilla.mozilla.org/show_bug.cgi?id=1470786 and https://bugzilla.mozilla.org/show_bug.cgi?id=1569007
| Assignee | ||
Comment 2•5 years ago
•
|
||
Waiting report's reply since I cannot reproduce on GBoard. So I don't know reproduce environment. (Xiomi's keyboard only?)
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
This is interesting that I cannot reproduce this using Google Playstore version (https://play.google.com/store/apps/details?id=com.iflytek.inputmethod.googleplay) since it doesn't use inline editing. I cannot find a setting for it.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=01c0f0814b755ce674be8cf1330a8a793d53f5d6
| Assignee | ||
Comment 4•5 years ago
|
||
This is timing issue when using iFLYTEC keyboard in Xiaomi App Store.
Although replace text transaction often dispatch dummy text change, it may be
unnecessary when other text change is already in text change queue. This issue
occurs if dummy text change is dispatched in the queue and other text change
is also dispatched in the queue.
AddIMETextChange merges old text change with newer text change when its range
is overlapped, but it doesn't consider range is same. So if same range, we
should adjust old end simply.
GV-junit test case emulates this situation, but since this is timing issue,
we won't reproduce this by this test case. But it is useful to check future
regressions.
Comment 6•5 years ago
|
||
| bugherder | ||
Comment 7•3 years ago
|
||
Moving some keyboard bugs to the new GeckoView::IME component.
Description
•